--- a/api-movie.yaml
+++ b/api-movie.yaml
@@ -1,14 +1,42 @@
+# server:
+#   port: 8085
+# spring:
+#   application:
+#     name: api-movie
+#   datasource:
+#     driverClassName: com.mysql.cj.jdbc.Driver
+#     url: jdbc:mysql://localhost:3307/movie-dev
+#     username: usr-movie
+#     password: pwd-movie
+
 server:
-  port: 8085
+  port: ${PORT${SERVER_PORT:0}}
 spring:
   application:
     name: api-movie
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
+    driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3307/movie-dev
     username: usr-movie
     password: pwd-movie
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
 
+info:
+  application:
+    name: api-movie
+
+eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance.id:${random.value}}
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 #Si quiere que ejecute con H2 y no con SQL descomente lo sigueinte, y comente el datasource anterior
 #  jpa:
 #    hibernate.ddl-auto: update
