--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -1,4 +1,5 @@
 server:
+    # port:8085
   port: ${PORT${SERVER_PORT:0}}
 spring:
   application:
@@ -9,9 +10,18 @@ spring:
     username: usr-catalog
     password: pwd-catalog
   jpa:
-    hibernate.ddl-auto: update
     generate-ddl: true
-    show-sql: true
+    hibernate:
+      enable_lazy_load_no_trans: true
+      event:
+        merge:
+          entity_copy_observer: allow
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL55Dialect
+        format_sql: true
+    show-sql: false
 
 info:
   application:
@@ -26,3 +36,12 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, info      
