--- a/api-movie.yml
+++ b/api-movie.yml
@@ -1,15 +1,5 @@
-# server:
-#   port: 8085
-# spring:
-#   application:
-#     name: api-movie
-#   datasource:
-#     driverClassName: com.mysql.cj.jdbc.Driver
-#     url: jdbc:mysql://localhost:3307/movie-dev
-#     username: usr-movie
-#     password: pwd-movie
-
 server:
+# port: 8085
   port: ${PORT${SERVER_PORT:0}}
 spring:
   application:
@@ -20,9 +10,18 @@ spring:
     username: usr-movie
     password: pwd-movie
   jpa:
-    hibernate.ddl-auto: update
     generate-ddl: true
-    show-sql: true
+    hibernate:
+      enable_lazy_load_no_trans: true
+      event:
+        merge:
+          entity_copy_observer: allow
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL55Dialect
+        format_sql: true
+    show-sql: false
 
 info:
   application:
@@ -37,6 +36,15 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, info      
 #Si quiere que ejecute con H2 y no con SQL descomente lo sigueinte, y comente el datasource anterior
 #  jpa:
 #    hibernate.ddl-auto: update
