--- a/eurekaServer.yml
+++ b/eurekaServer.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8761
+  port: ${PORT:8761}
 
 spring:
   application:
-    name: eurekaserver
+    name: eurekaServer
 eureka:
   instance:
     hostname: localhost
@@ -12,3 +12,9 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
