--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -36,6 +36,7 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+urlCheck: http://localhost:8083
 
 management:
   info:
