--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -1,14 +1,8 @@
 server:
-    # port:8085
-  port: ${PORT${SERVER_PORT:0}}
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
     name: api-catalog
-  datasource:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/catalog-dev
-    username: usr-catalog
-    password: pwd-catalog
   jpa:
     generate-ddl: true
     hibernate:
@@ -23,14 +17,10 @@ spring:
         format_sql: true
     show-sql: false
 
-info:
-  application:
-    name: api-catalog
-
 eureka:
   instance:
     hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance.id:${random.value}}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     registerWithEureka: true
     fetchRegistry: true
@@ -45,4 +35,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info      
+        include: health, info
