--- a/api-movie.yml
+++ b/api-movie.yml
@@ -1,14 +1,14 @@
 server:
-# port: 8085
-  port: ${PORT${SERVER_PORT:0}}
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
     name: api-movie
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3307/movie-dev
     username: usr-movie
     password: pwd-movie
+
   jpa:
     generate-ddl: true
     hibernate:
@@ -23,19 +23,15 @@ spring:
         format_sql: true
     show-sql: false
 
-info:
-  application:
-    name: api-movie
-
-eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance.id:${random.value}}
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+  eureka:
+    instance:
+      hostname: localhost
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    client:
+      registerWithEureka: true
+      fetchRegistry: true
+      serviceUrl:
+        defaultZone: http://localhost:8761/eureka/
 urlCheck: http://localhost:8083
 
 management:
@@ -45,32 +41,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info      
-#Si quiere que ejecute con H2 y no con SQL descomente lo sigueinte, y comente el datasource anterior
-#  jpa:
-#    hibernate.ddl-auto: update
-#    generate-ddl: true
-#    show-sql: true
-#
-#  datasource:
-#    url: jdbc:h2:mem:testdb
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password: sa
-#  jpa:
-#    open-in-view: false
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.H2Dialect
-#        format_sql: true
-#    h2:
-#      console:
-#        enabled: true
-#        path: /h2-console
-#logging:
-#  level:
-#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-
+        include: health, info
